welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:7: error: value int is not a member of object Math
	Math.int(x);
             ^